--- a/Land/clms-hrsi-arlie-Askjavatn-case/askja-use-case.ipynb
+++ b/Land/clms-hrsi-arlie-Askjavatn-case/askja-use-case.ipynb
@@ -4,10 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Use case 2 📊🗺️\n",
-    "## Unexpected melting of Öskjuvatn, Iceland\n",
+    "### Askja use case 📊🗺️\n",
+    "## Melting of Öskjuvatn, Iceland\n",
     "\n",
     "<img src=\"images/AskjaVulcano.jpg\" alt=\"Drawing\" style=\"width: 600px;\"/>\n",
+    "\n",
+    "This notebook is modified version of notebook developed by EEA\n",
     "\n",
     "This notebook demonstrates how ARLIE data can be used to study an unexpected melting event in the volcanic lake Öskjuvatn. Located in the crater of the active volcano Askja in the central highlands of Iceland, the lake usually stays frozen until June or July. Yet, in February 2023, Copernicus Sentinel-2 satellite images revealed an early melting of the lake. The actual reason behind the melting event is not fully clarified but likely due to increased geothermal activity of the Askja vulcano.\n",
     "\n",
