--- a/Land/clms-hrsi-arlie_demo-iceland/how-to-get-started.ipynb
+++ b/Land/clms-hrsi-arlie_demo-iceland/how-to-get-started.ipynb
@@ -16,7 +16,9 @@
     "4) Transform to WKT format\n",
     "5) Request ARLIE data\n",
     "6) Display ARLIE data\n",
-    "7) Display EU Hydro data\n"
+    "7) Display EU Hydro data\n",
+    "\n",
+    "This notebook is sligthly  modified version of \n"
    ]
   },
   {
