--- a/Land/clms-hrsi-arlie_demo-iceland/askja-use-case.ipynb
+++ b/Land/clms-hrsi-arlie_demo-iceland/askja-use-case.ipynb
@@ -7,9 +7,9 @@
     "### Askja use case 📊🗺️\n",
     "## Melting of Öskjuvatn, Iceland\n",
     "\n",
-    "<img src=\"images/AskjaVulcano.jpg\" alt=\"Drawing\" style=\"width: 600px;\"/>\n",
+    "<img src=\"images/AskjaVulcano.jpg\" alt=\"Drawing\" style=\"width: 800px;\"/>\n",
     "\n",
-    "This notebook is modified version of notebook developed by EEA\n",
+    "This notebook is modified version of [notebook developed by EEA](https://github.com/eea/clms-hrsi-arlie-use-case/blob/main/use-case-2.ipynb)\n",
     "\n",
     "This notebook demonstrates how ARLIE data can be used to study an unexpected melting event in the volcanic lake Öskjuvatn. Located in the crater of the active volcano Askja in the central highlands of Iceland, the lake usually stays frozen until June or July. Yet, in February 2023, Copernicus Sentinel-2 satellite images revealed an early melting of the lake. The actual reason behind the melting event is not fully clarified but likely due to increased geothermal activity of the Askja vulcano.\n",
     "\n",
@@ -17,6 +17,31 @@
     " 1) Retrieve and organise ARLIE data for Lake Öskjuvatn\n",
     " 2) Sanity check data and filter noisy observations\n",
     " 3) Analyse time series for Lake Öskjuvatn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install pandas\n",
+    "%pip install matplotlib\n",
+    "%pip install pyplot\n",
+    "%pip install contextily"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **pandas**: data analysis and manipulation library in Python, used for working with structured data such as DataFrames.\n",
+    "  \n",
+    "- **matplotlib**: library for creating static, animated, and interactive visualizations in Python, typically used for 2D plotting.\n",
+    "\n",
+    "- **pyplot**: A module within `matplotlib` that provides a MATLAB-like interface for creating plots easily and interactively.\n",
+    "\n",
+    "- **contextily**: A library used to add basemaps (like satellite imagery or street maps) to geospatial visualizations, especially with `GeoPandas`.\n"
    ]
   },
   {
