--- a/Land/clms-hrsi-arlie_demo-iceland/how-to-get-started.ipynb
+++ b/Land/clms-hrsi-arlie_demo-iceland/how-to-get-started.ipynb
@@ -5,9 +5,14 @@
    "id": "72628a90-58d4-4d91-a811-f61f7a48a442",
    "metadata": {},
    "source": [
-    "### How to get started 👩‍🏫\n",
+    "### How to get ARLIE data\n",
     "In the following, you can find a beginner-friendly guide on how to retrieve ARLIE data.\n",
-    "The ARLIE data is stored in a persistent PostGIS database. Users can request the data through a REST API by using two URLs. One URL is to acquire lake and river geometries within a specified area of interest (AOI) while the other is to retrieve ARLIE data for the AOI. It is important to note that data requests must adhere to the Well-Known Text (WKT) format.<br>\n",
+    "\n",
+    "[The Copernicus Aggregated River and Lake Ice Extent (ARLIE) product](https://land.copernicus.eu/en/products/water-bodies/high-resolution-aggregated-river-and-lake-ice-extent) is a spatially aggregated information on surface water conditions of rivers and lakes. ARLIE information is stored in a geodatabase, enriched every day from the River and Lake Ice extent products (RLIE S1, RLIE S2 and RLIE S1+S2) for the entire EEA38 and the United Kingdom. It provides percent coverage of snow-covered or snow-free ice on lakes and on 10 km river sections described by the EU-HYDRO river and lake network database.<br>\n",
+    "<br>\n",
+    "The ARLIE products are stored in a PostGIS persistent geodatabase. They can be retrieved by using a specific REST API. Users can query ice sheet summary information of river segments and lakes (ARLIE statistics) together with the geometry and caracteristics of the features on which these statistics were estimated. All geometry features are delivered in the ETRS89 LAEA (EPSG:3035) coordinate reference system.<br>\n",
+    "<br>\n",
+    "ARLIE is one of the products of the pan-European High-Resolution Snow & Ice service (HR-S&I), which are provided at high spatial resolution (20 m x 20 m and 60 m x 60 m) from the Sentinel-2 and Sentinel-1 constellations data from September 1, 2016 onwards.<br>\n",
     "<br>\n",
     "This notebook contains the following steps:<br>\n",
     "1) Initial setup\n",
@@ -18,7 +23,9 @@
     "6) Display ARLIE data\n",
     "7) Display EU Hydro data\n",
     "\n",
-    "This notebook is sligthly  modified version of \n"
+    "It is important to note that data requests must adhere to the Well-Known Text (WKT) format.<br>\n",
+    "<br>\n",
+    "This notebook is sligthly modified version of [how-to-get-started notebook](https://github.com/eea/clms-hrsi-arlie-use-case/blob/main/how-to-get-started.ipynb) developed by EEA.\n"
    ]
   },
   {
@@ -27,13 +34,23 @@
    "metadata": {},
    "source": [
     "#### 1) Initial setup\n",
-    "1. First of all, pick your preferred platform for running Jupyter Notebooks 👩‍💻 <br>\n",
+    "1. First of all, pick your preferred platform for running Jupyter Notebooks<br>\n",
     "*(For instance, you can opt for the [WekEO platform](https://help.wekeo.eu/en/articles/6337538-what-is-the-wekeo-jupyterhub))*<br>\n",
-    "2. Next, copy this GitHub repository and paste all the included notebooks onto your chosen platform<br>\n",
-    "4. Make sure that you have the [clms_hrsi_arlie_downloader.py](clms_hrsi_arlie_downloader.py) located next to this notebook<br>\n",
+    "2. Next, copy this GitHub repository or [the original one](https://github.com/eea/clms-hrsi-arlie-use-case.git) and paste all the included notebooks onto your chosen platform<br>\n",
+    "3. Make sure that you have the [clms_hrsi_arlie_downloader.py](clms_hrsi_arlie_downloader.py) located next to this notebook<br>\n",
     "*You can see an example of the folder structure below*<br>\n",
-    "<img src=\"images/folders.png\"/><br>\n",
-    "5. Additional to some standard Python libraries you will need: [Folium](https://pypi.org/project/folium/), [Geopandas](https://pypi.org/project/geopandas/) & [Shapely](https://pypi.org/project/shapely/).<br>\n",
+    "<img src=\"images/folders.png\"/><br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e4631cc",
+   "metadata": {},
+   "source": [
+    "4. Make sure you have installed all the necessary Python libraries. Additional to some standard Python libraries you will need: \n",
+    "* [Folium](https://pypi.org/project/folium/), \n",
+    "* [Geopandas](https://pypi.org/project/geopandas/) & \n",
+    "* [Shapely](https://pypi.org/project/shapely/).<br>\n",
     "In case you miss any libraries throughout this tutorial, simply install them by running `%pip install {package name}`\n",
     "See example below:"
    ]
