--- a/Land/clms-hrsi-arlie_demo-iceland/how-to-get-started.ipynb
+++ b/Land/clms-hrsi-arlie_demo-iceland/how-to-get-started.ipynb
@@ -49,8 +49,9 @@
    "source": [
     "4. Make sure you have installed all the necessary Python libraries. Additional to some standard Python libraries you will need: \n",
     "* [Folium](https://pypi.org/project/folium/), \n",
-    "* [Geopandas](https://pypi.org/project/geopandas/) & \n",
+    "* [Geopandas](https://pypi.org/project/geopandas/),\n",
     "* [Shapely](https://pypi.org/project/shapely/).<br>\n",
+    "<br>\n",
     "In case you miss any libraries throughout this tutorial, simply install them by running `%pip install {package name}`\n",
     "See example below:"
    ]
