--- a/Land/clms-hrsi-arlie_demo-iceland/how-to-get-started.ipynb
+++ b/Land/clms-hrsi-arlie_demo-iceland/how-to-get-started.ipynb
@@ -39,7 +39,7 @@
     "2. Next, copy this GitHub repository or [the original one](https://github.com/eea/clms-hrsi-arlie-use-case.git) and paste all the included notebooks onto your chosen platform<br>\n",
     "3. Make sure that you have the [clms_hrsi_arlie_downloader.py](clms_hrsi_arlie_downloader.py) located next to this notebook<br>\n",
     "*You can see an example of the folder structure below*<br>\n",
-    "<img src=\"images/folders.png\"/><br>\n"
+    "<img src=\"images/folders1.png\"/><br>\n"
    ]
   },
   {
@@ -48,10 +48,21 @@
    "metadata": {},
    "source": [
     "4. Make sure you have installed all the necessary Python libraries. Additional to some standard Python libraries you will need: \n",
-    "* [Folium](https://pypi.org/project/folium/), \n",
-    "* [Geopandas](https://pypi.org/project/geopandas/),\n",
-    "* [Shapely](https://pypi.org/project/shapely/).<br>\n",
+    "    - [Folium](https://pypi.org/project/folium/): A library that simplifies the creation of interactive maps using Python and Leaflet.js, allowing for easy visualization of geospatial data., \n",
+    "    - [Geopandas](https://pypi.org/project/geopandas/): An extension of pandas designed to work with geospatial data, enabling operations like spatial joins and geometric manipulations using familiar DataFrame structures,\n",
+    "    - [Shapely](https://pypi.org/project/shapely/): A library for manipulating and analyzing planar geometric objects, providing tools for creating and working with points, lines, and polygons in a geometric context..<br>\n",
     "<br>\n",
+    "\n",
+    "_Other python libraries that could be quite be handy_:\n",
+    "- [pandas](https://pandas.pydata.org/): A powerful library for data manipulation and analysis, ideal for handling structured data through DataFrames.\n",
+    "  \n",
+    "- *[matplotlib](https://matplotlib.org/)*: A versatile library for creating a wide range of static, animated, and interactive visualizations in Python, focusing on 2D plotting.\n",
+    "\n",
+    "- *[pyplot](https://matplotlib.org/stable/api/pyplot_summary.html)*: A module within `matplotlib` that provides a MATLAB-like interface for creating plots easily and interactively.\n",
+    "\n",
+    "- *[contextily](https://contextily.readthedocs.io/en/stable/)*: A library used to add basemaps (like satellite imagery or street maps) to geospatial visualizations, especially with `GeoPandas`.\n",
+    "\n",
+    "\n",
     "In case you miss any libraries throughout this tutorial, simply install them by running `%pip install {package name}`\n",
     "See example below:"
    ]
