--- a/Land/clms-hrsi-arlie_demo-iceland/how-to-get-started.ipynb
+++ b/Land/clms-hrsi-arlie_demo-iceland/how-to-get-started.ipynb
@@ -54,7 +54,7 @@
     "<br>\n",
     "\n",
     "_Other python libraries that could be quite be handy_:\n",
-    "- [pandas](https://pandas.pydata.org/): A powerful library for data manipulation and analysis, ideal for handling structured data through DataFrames.\n",
+    "- *[pandas](https://pandas.pydata.org/)*: A powerful library for data manipulation and analysis, ideal for handling structured data through DataFrames.\n",
     "  \n",
     "- *[matplotlib](https://matplotlib.org/)*: A versatile library for creating a wide range of static, animated, and interactive visualizations in Python, focusing on 2D plotting.\n",
     "\n",
@@ -131,10 +131,17 @@
     }
    ],
    "source": [
+    "# press shift+enter to execute a cell\n",
+    "\n",
     "%pip install folium\n",
     "%pip install Geopandas\n",
     "%pip install Shapely\n",
-    "# Note: press shift+enter to execute a cell"
+    "\n",
+    "# to uncomment a line, select the line and press ctrl+/ or delete the # and space\n",
+    "# %pip install pandas\n",
+    "# %pip install matplotlib\n",
+    "# %pip install pyplot\n",
+    "# %pip install contextily"
    ]
   },
   {
