--- a/Land/clms-hrsi-arlie_demo-iceland/how-to-get-started.ipynb
+++ b/Land/clms-hrsi-arlie_demo-iceland/how-to-get-started.ipynb
@@ -134,7 +134,14 @@
    "id": "f5480860",
    "metadata": {},
    "source": [
-    "When you execute the cell below, an interactive map appears. This map can be used to draw your AOI. Use the toolbar on the left to zoom, draw and edit a geometry, and after choosing your area, export the geometry using the small 'Export' button to the right. A window will appear and ask you to save in geojson format. Save it to the same folder as this notebook or somewhere in your computer and upload it into the same folder as this notebook\n",
+    "When you execute the cell below, an interactive map will appear. You can use this map to draw your Area of Interest (AOI). Follow these steps:\n",
+    "\n",
+    "1. Navigate the Map: Use the toolbar on the left to zoom in, zoom out, and move around the map.\n",
+    "2. Draw Your AOI: Click the drawing tool (polygon) in the toolbar and draw your desired AOI on the map.\n",
+    "3. Edit Geometry: If needed, use the toolbar to edit or refine the drawn geometry.\n",
+    "4. Export the Geometry: Once you're satisfied with your AOI, click the small 'Export' button on the right side of the toolbar. A window will appear prompting you to save the file.\n",
+    "5.  Save as GeoJSON: Save the file in GeoJSON format. You can save it either in the same folder as this notebook or anywhere on your computer.\n",
+    "6. Upload the GeoJSON: If you saved the file elsewhere, make sure to upload it into the same folder where this notebook is located to ensure the notebook can access it.\n",
     "<br>\n",
     "<br>\n",
     "\n",
