--- a/Land/clms-hrsi-arlie_demo-iceland/how-to-get-started.ipynb
+++ b/Land/clms-hrsi-arlie_demo-iceland/how-to-get-started.ipynb
@@ -33,7 +33,7 @@
    "id": "4a9c222b",
    "metadata": {},
    "source": [
-    "#### Step 1: Initial setup\n",
+    "#### **Step 1: Initial setup**\n",
     "1. First of all, pick your preferred platform for running Jupyter Notebooks<br>\n",
     "*(For instance, you can opt for the [WekEO platform](https://help.wekeo.eu/en/articles/6337538-what-is-the-wekeo-jupyterhub))*<br>\n",
     "2. Next, copy this GitHub repository or [the original one](https://github.com/eea/clms-hrsi-arlie-use-case.git) and paste all the included notebooks onto your chosen platform<br>\n",
@@ -99,26 +99,14 @@
     "tags": []
    },
    "source": [
-    "#### Step 2: Pick your AOI\n",
+    "#### **Step 2: Pick your AOI**\n",
     "To access ARLIE data for your specific AOI, you have two options. You can either upload a predefined geometry (e.g., a shapefile or GeoJSON) or you can draw a custom geometry on a map following the steps below. \n",
     "\n",
-    "If you have a [predetermined geometry, jump directly to step 4](#step-4-transform-to-wkt-format). \n",
+    "- If you have a [predetermined geometry, jump directly to step 3](#step-3-transform-to-wkt-format). \n",
     "\n",
-    "In case you [have a file in WKT format, jump to step 5](#step-5-request-arlie-data).\n",
+    "- In case you [have a file in WKT format, jump to step 4](#step-4-request-arlie-data).\n",
     "\n",
     "The geometry is used to request all lake and river polygons from the EU Hydro database within your AOI, which, in turn, is used to retrieve ARLIE data from the PostGIS database.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "946d1e3f-2f4b-4e1f-b265-e31f3d2c06e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import some general libraries\n",
-    "import os\n",
-    "from pathlib import Path"
    ]
   },
   {
@@ -126,7 +114,7 @@
    "id": "324586b1-d871-4778-bcc5-bdb7f53a1dfc",
    "metadata": {},
    "source": [
-    "#### Draw a custom geometry using Folium"
+    "#### *2.1: Draw a custom geometry using Folium*"
    ]
   },
   {
@@ -136,17 +124,17 @@
    "source": [
     "When you execute the cell below, an interactive map will appear. You can use this map to draw your Area of Interest (AOI). Follow these steps:\n",
     "\n",
-    "1. Navigate the Map: Use the toolbar on the left to zoom in, zoom out, and move around the map.\n",
-    "2. Draw Your AOI: Click the drawing tool (polygon) in the toolbar and draw your desired AOI on the map.\n",
-    "3. Edit Geometry: If needed, use the toolbar to edit or refine the drawn geometry.\n",
-    "4. Export the Geometry: Once you're satisfied with your AOI, click the small 'Export' button on the right side of the toolbar. A window will appear prompting you to save the file.\n",
-    "5.  Save as GeoJSON: Save the file in GeoJSON format. You can save it either in the same folder as this notebook or anywhere on your computer.\n",
-    "6. Upload the GeoJSON: If you saved the file elsewhere, make sure to upload it into the same folder where this notebook is located to ensure the notebook can access it.\n",
+    "1. *Navigate the Map*: Use the toolbar on the left to zoom in, zoom out, and move around the map.\n",
+    "2. *Draw Your AOI*: Click the drawing tool (polygon) in the toolbar and draw your desired AOI on the map.\n",
+    "3. *Edit Geometry*: If needed, use the toolbar to edit or refine the drawn geometry.\n",
+    "4. *Export the Geometry*: Once you're satisfied with your AOI, click the small 'Export' button on the right side of the toolbar. A window will appear prompting you to save the file.\n",
+    "5. *Save as GeoJSON*: Save the file in GeoJSON format. You can save it either in the same folder as this notebook or anywhere on your computer.\n",
+    "6. *Upload the GeoJSON*: If you saved the file elsewhere, make sure to upload it into the same folder where this notebook is located to ensure the notebook can access it.\n",
     "<br>\n",
     "<br>\n",
     "\n",
     "\n",
-    "<img src=\"images/folium1.png\" alt=\"Drawing\" style=\"width: 400px;\"/>\n",
+    "<img src=\"images/folium1.png\" alt=\"Drawing\" style=\"width: 800px;\"/>\n",
     "\n",
     "🤫 Note, the geometry should have an appropriate size and complexety, so try with a smaller area if you experience issues later in the workflow."
    ]
@@ -310,7 +298,7 @@
     "import folium\n",
     "from folium.plugins import Draw\n",
     "\n",
-    "# Initialise an interactive map\n",
+    "# Initialise an interactive map, get the coordinates from Google Maps for example to center the map\n",
     "m = folium.Map(location=[64.5, -18], zoom_start=7)\n",
     "\n",
     "#  Add a function to draw and export your polygon\n",
@@ -323,21 +311,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e647e978-08f3-4a62-a27f-9fdf8a32de6e",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "310bcddd-9a7b-4f1a-a1d0-d159b5ed2fdc",
+   "id": "d03cdc80",
    "metadata": {},
    "source": [
-    "#### Step 3: Import your geometry and display it"
+    "##### *2.2: Import and display you rgeometry*\n",
+    "\n",
+    "Once you have saved the GeoJSON file of your AOI in the *data folder*/*, follow the steps below to import and display it. If you already have a GeoJSON file from another source, make sure to place it in the *data folder* and follow the same steps.\n",
+    "\n",
+    "Steps:\n",
+    "1. Import the AOI Geometry: The code will read the GeoJSON file from the data folder and convert it into a geospatial format that can be displayed.\n",
+    "\n",
+    "    - If you created the GeoJSON in the previous step, it should already be saved in the data folder.\n",
+    "    - If you already have a GeoJSON file from somewhere else, ensure it is placed in the data folder as aoi.geojson or adjust the file path accordingly.\n",
+    "\n",
+    "2. Display the AOI: The map will show the outline of your selected area on an interactive map.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "id": "1eb94501-42ca-40b8-ab7e-e16a08838a4e",
    "metadata": {
     "tags": []
@@ -347,10 +339,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\michaela.hrabalikova\\AppData\\Local\\Temp\\ipykernel_45296\\1698464263.py:14: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+      "C:\\Users\\michaela.hrabalikova\\AppData\\Local\\Temp\\ipykernel_45296\\2152427444.py:17: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
       "\n",
       "  aoiX = gdf[\"geometry\"].centroid.x\n",
-      "C:\\Users\\michaela.hrabalikova\\AppData\\Local\\Temp\\ipykernel_45296\\1698464263.py:15: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+      "C:\\Users\\michaela.hrabalikova\\AppData\\Local\\Temp\\ipykernel_45296\\2152427444.py:18: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
       "\n",
       "  aoiY = gdf[\"geometry\"].centroid.y\n"
      ]
@@ -385,7 +377,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_10bd2313702a56bbf6517e881d347eef {\n",
+       "                #map_12c1c1aa14566821ac3953ced249f97d {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -399,14 +391,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_10bd2313702a56bbf6517e881d347eef&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_12c1c1aa14566821ac3953ced249f97d&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_10bd2313702a56bbf6517e881d347eef = L.map(\n",
-       "                &quot;map_10bd2313702a56bbf6517e881d347eef&quot;,\n",
+       "            var map_12c1c1aa14566821ac3953ced249f97d = L.map(\n",
+       "                &quot;map_12c1c1aa14566821ac3953ced249f97d&quot;,\n",
        "                {\n",
        "                    center: [64.217322, -18.908603999999997],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -415,92 +407,97 @@
        "                    preferCanvas: false,\n",
        "                }\n",
        "            );\n",
-       "            L.control.scale().addTo(map_10bd2313702a56bbf6517e881d347eef);\n",
+       "            L.control.scale().addTo(map_12c1c1aa14566821ac3953ced249f97d);\n",
        "\n",
        "            \n",
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_7c962eb40db4c4e7b544caae49f5cd26 = L.tileLayer(\n",
+       "            var tile_layer_dbe7bdde6f8259e40437bd67bc50052e = L.tileLayer(\n",
        "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;https://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 19, &quot;maxZoom&quot;: 15, &quot;minZoom&quot;: 1, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_7c962eb40db4c4e7b544caae49f5cd26.addTo(map_10bd2313702a56bbf6517e881d347eef);\n",
+       "            tile_layer_dbe7bdde6f8259e40437bd67bc50052e.addTo(map_12c1c1aa14566821ac3953ced249f97d);\n",
        "        \n",
        "    \n",
-       "        function geo_json_209e8efe8bf83aaa197adaf921c99e1c_styler(feature) {\n",
+       "        function geo_json_dade01056f9f0bf9ac5cdb704198d5a9_styler(feature) {\n",
        "            switch(feature.id) {\n",
        "                default:\n",
        "                    return {&quot;color&quot;: &quot;Crimson&quot;, &quot;fillOpacity&quot;: 0.1};\n",
        "            }\n",
        "        }\n",
        "\n",
-       "        function geo_json_209e8efe8bf83aaa197adaf921c99e1c_onEachFeature(feature, layer) {\n",
+       "        function geo_json_dade01056f9f0bf9ac5cdb704198d5a9_onEachFeature(feature, layer) {\n",
        "            layer.on({\n",
        "            });\n",
        "        };\n",
-       "        var geo_json_209e8efe8bf83aaa197adaf921c99e1c = L.geoJson(null, {\n",
-       "                onEachFeature: geo_json_209e8efe8bf83aaa197adaf921c99e1c_onEachFeature,\n",
+       "        var geo_json_dade01056f9f0bf9ac5cdb704198d5a9 = L.geoJson(null, {\n",
+       "                onEachFeature: geo_json_dade01056f9f0bf9ac5cdb704198d5a9_onEachFeature,\n",
        "            \n",
-       "                style: geo_json_209e8efe8bf83aaa197adaf921c99e1c_styler,\n",
+       "                style: geo_json_dade01056f9f0bf9ac5cdb704198d5a9_styler,\n",
        "        });\n",
        "\n",
-       "        function geo_json_209e8efe8bf83aaa197adaf921c99e1c_add (data) {\n",
-       "            geo_json_209e8efe8bf83aaa197adaf921c99e1c\n",
+       "        function geo_json_dade01056f9f0bf9ac5cdb704198d5a9_add (data) {\n",
+       "            geo_json_dade01056f9f0bf9ac5cdb704198d5a9\n",
        "                .addData(data);\n",
        "        }\n",
-       "            geo_json_209e8efe8bf83aaa197adaf921c99e1c_add({&quot;features&quot;: [{&quot;geometry&quot;: {&quot;coordinates&quot;: [[[-19.659868, 63.984371], [-19.659868, 64.450273], [-18.15734, 64.450273], [-18.15734, 63.984371], [-19.659868, 63.984371]]], &quot;type&quot;: &quot;Polygon&quot;}, &quot;id&quot;: &quot;0&quot;, &quot;properties&quot;: {}, &quot;type&quot;: &quot;Feature&quot;}], &quot;type&quot;: &quot;FeatureCollection&quot;});\n",
+       "            geo_json_dade01056f9f0bf9ac5cdb704198d5a9_add({&quot;features&quot;: [{&quot;geometry&quot;: {&quot;coordinates&quot;: [[[-19.659868, 63.984371], [-19.659868, 64.450273], [-18.15734, 64.450273], [-18.15734, 63.984371], [-19.659868, 63.984371]]], &quot;type&quot;: &quot;Polygon&quot;}, &quot;id&quot;: &quot;0&quot;, &quot;properties&quot;: {}, &quot;type&quot;: &quot;Feature&quot;}], &quot;type&quot;: &quot;FeatureCollection&quot;});\n",
        "\n",
        "        \n",
        "    \n",
-       "            geo_json_209e8efe8bf83aaa197adaf921c99e1c.addTo(map_10bd2313702a56bbf6517e881d347eef);\n",
+       "            geo_json_dade01056f9f0bf9ac5cdb704198d5a9.addTo(map_12c1c1aa14566821ac3953ced249f97d);\n",
        "        \n",
        "&lt;/script&gt;\n",
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x1bb4e1fa800>"
+       "<folium.folium.Map at 0x1bb4e8cf400>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Import relevant libraries\n",
-    "import folium\n",
+    "import folium \n",
     "import geopandas as gpd\n",
-    "import os\n",
+    "from pathlib import Path # alternative to os.path\n",
     "\n",
-    "# Create the 'data' folder if it doesn't exist and set the path to your AOI inside the 'data' folder\n",
-    "os.makedirs('data', exist_ok=True)\n",
-    "aoi_path = os.path.join('data', 'aoi.geojson')\n",
+    "# Create the 'data' folder if it doesn't exist using Path\n",
+    "data_dir = Path('data')\n",
+    "data_dir.mkdir(exist_ok=True)\n",
     "\n",
-    "# Read the AOI as a geodataframe\n",
+    "# Set the path to your AOI using Path\n",
+    "aoi_path = data_dir / 'aoi.geojson'\n",
+    "\n",
+    "# Read the AOI as a GeoDataFrame\n",
     "gdf = gpd.read_file(aoi_path)\n",
     "\n",
-    "# Retrieve the center points of the AOI to display it later\n",
+    "# Retrieve the center points of the AOI for map centering\n",
     "aoiX = gdf[\"geometry\"].centroid.x\n",
     "aoiY = gdf[\"geometry\"].centroid.y\n",
     "\n",
-    "# Add your AOI to an interactive map and display it\n",
+    "# Display the AOI on a map\n",
     "m = folium.Map(\n",
-    "    location=[aoiY[0],aoiX[0]],\n",
+    "    location=[aoiY[0], aoiX[0]],\n",
     "    tiles='OpenStreetMap',\n",
     "    zoom_start=7,\n",
     "    min_zoom=1,\n",
     "    max_zoom=15,\n",
-    "    control_scale=True)\n",
+    "    control_scale=True\n",
+    ")\n",
     "\n",
-    "folium.GeoJson(aoi_path, name=\"AOI\", style_function=lambda x: {\n",
+    "# Add the AOI to the map\n",
+    "folium.GeoJson(str(aoi_path), name=\"AOI\", style_function=lambda x: {\n",
     "    'fillOpacity': 0.1,\n",
     "    'color': 'Crimson'\n",
-    "    }).add_to(m)\n",
+    "}).add_to(m)\n",
     "\n",
-    "# Display the map\n",
+    "# Show the map\n",
     "m"
    ]
   },
@@ -509,7 +506,7 @@
    "id": "d5c05560-868e-4049-8732-8735dae77cda",
    "metadata": {},
    "source": [
-    "#### Step 4: Transform to WKT format\n",
+    "#### Step 3: Transform to WKT format\n",
     "Transform your AOI from the Geojson to WKT format using Shapely. In case you uploaded a shapefile, simply use this as input."
    ]
   },
@@ -563,7 +560,7 @@
    "id": "e685ed4e-82fb-40c5-a70a-3dcde928ef5d",
    "metadata": {},
    "source": [
-    "#### Step 5: Request ARLIE data\n",
+    "#### Step 4: Request ARLIE data\n",
     "The retrieval of the ARLIE data can take a while, depending on the size and complexety of your AOI. In the end, you should see a message informing on where the output has been saved and how many ARLIE records have been found."
    ]
   },
